# forming

./: .gitignore  .hlint.yaml  Core.hs  Forming.hs  LICENSE  README.md  build.sh  clean.sh  default.nix  forming.cabal  run-add.sh  run-coverage.sh  run-forming.sh  run-ghcid.sh  run-server.sh  run-tests.sh  script.hs  shell.nix  upload-to-entrypoint.sh
Forming/: Command.hs  Core.hs  Html.hs  IO.hs  Lexer.hs  Parser.hs  Run.hs  Servant.hs  Server.hs  Syntax.hs  Type.hs
examples/: add.fg  compensation.fg  trivial-1.fg  trivial-a.fg
nix/: contents.nix  overlay.nix  overlays.nix  sources.json  syntactical.nix
scripts/: build.sh  clean.sh  ghci.conf  ghci.sh  ghcid-forming.sh  ghcid-tests.sh  ghcid.sh  run-examples.sh  servant-examples.sh  serve-examples.sh
src/: Forming.hs
src/Forming/: Command.hs  Core.hs  Html.hs  IO.hs  Lexer.hs  Parser.hs  Run.hs  Servant.hs  Server.hs  Syntax.hs  Type.hs
tests/: run-tests.hs
tests/Forming/: GHCi.hs  Runner.hs
