cabal-version:       >=1.10
name:                forming
version:             0.0.1
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  build-depends:       aeson
                     , base
                     , blaze-html
                     , containers
                     , Decimal
                     , lens
                     , servant
                     , servant-blaze
                     , servant-server
                     , snap
                     , snap-core
                     , snap-server
  exposed-modules:     Forming
                     , Forming.Core
                     , Forming.Html
                     , Forming.IO
                     , Forming.Lexer
                     , Forming.Parser
                     , Forming.Servant
                     , Forming.Server
                     , Forming.Syntax
                     , Forming.Type
  default-language:    Haskell2010
  ghc-options:         -Wall

executable forming
  main-is:             forming.hs
  build-depends:       base, forming
  hs-source-dirs:      bin
  default-language:    Haskell2010

executable forming-examples
  main-is:             forming-examples.hs
  build-depends:       base, forming
  hs-source-dirs:      bin
  default-language:    Haskell2010

test-suite run-tests
  type:                exitcode-stdio-1.0
  main-is:             run-tests.hs
  build-depends:       base
                     , forming
                     , tasty
                     , tasty-hunit
  hs-source-dirs:      bin
  default-language:    Haskell2010
  ghc-options:         -Wall
