cabal-version:       2.2
name:                forming
version:             0.0.1
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

common common-extensions
  default-language: Haskell2010
  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    TypeApplications

library
  import: common-extensions
  hs-source-dirs:      src
  build-depends:       aeson
                     , base-noprelude >=4.7 && <5
                     , blaze-html
                     , bytestring
                     , containers
                     , Decimal
                     , hypered-design
                     , directory
                     , filepath
                     , lens
                     , optparse-applicative
                     , parsec
                     , pretty-simple
                     , process
                     , protolude
                     , scientific
                     , servant
                     , servant-blaze
                     , servant-server
                     , snap
                     , snap-core
                     , snap-server
                     , syntactical
                     , text
                     , unordered-containers
                     , wai
                     , warp
  exposed-modules:     Forming
                     , Forming.Command
                     , Forming.Core
                     , Forming.Html
                     , Forming.IO
                     , Forming.Lexer
                     , Forming.Parser
                     , Forming.Run
                     , Forming.Servant
                     , Forming.Server
                     , Forming.Syntax
                     , Forming.Type
  default-language:    Haskell2010
  ghc-options:         -Wall

executable forming
  import: common-extensions
  main-is:             forming.hs
  build-depends:       base-noprelude >=4.7 && <5
                     , forming
                     , optparse-applicative
                     , protolude
  hs-source-dirs:      bin
  default-language:    Haskell2010

executable forming-examples
  import: common-extensions
  main-is:             forming-examples.hs
  build-depends:       base-noprelude >=4.7 && <5
                     , forming
                     , protolude
  hs-source-dirs:      bin
  default-language:    Haskell2010

test-suite forming-tests
  import: common-extensions
  type:                exitcode-stdio-1.0
  main-is:             run-tests.hs
  build-depends:       base-noprelude >=4.7 && <5
                     , forming
                     , hspec
                     , protolude
                     , tasty
                     , tasty-hunit
                     , tasty-silver
  other-modules:
    Forming.Runner
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall
